# ft

./: .gitignore  AUTHENTICATION_SETUP.md  HF_JOBS_GUIDE.md  LM_STUDIO_GUIDE.md  OPTIMIZATION_SUMMARY.md  README.md  README_SPACE.md  WINDOWS_SETUP.md  app.py  convert_model.py  convert_to_gguf.py  hf_jobs_train.py  install_llama_cpp.py  manual_convert.py  merge_lora.py  monitor_job.py  pyproject.toml  run_gguf_model.py  simple_train.py  submit_hf_job_cli.py  temp_convert.py  test_model.py
configs/: mirror_config.yaml  space_config.yaml  training_config.yaml  training_config_china.yaml  training_config_gtx1080.yaml  training_config_optimized.yaml  training_config_public.yaml  training_config_rtx4090.yaml  training_config_windows.yaml
data/test/: data-00000-of-00001.arrow  dataset_info.json  state.json
data/train/: data-00000-of-00001.arrow  state.json
data/validation/: data-00000-of-00001.arrow  state.json
scripts/: check_cuda.py  check_dataset.py  check_python.py  deploy_to_space.py  evaluate.py  fix_cuda_and_train.bat  prepare_data.py  quick_start.py  setup_windows.bat  test_data.py  test_dataset_fix.py  test_fix.py  test_mirrors.py  test_model_loading.py  train.py  train_china.bat  train_hf_jobs.py  train_rtx4090.bat  train_windows.bat  train_with_mirror.py
src/: __init__.py  data_processor.py  mirror_utils.py  model_config.py  trainer.py  utils.py
tests/: test_data_processor.py
