[project]
name = "gemma3-tool-finetuning"
version = "0.1.0"
description = "使用PEFT微调Gemma3-1b模型以支持工具调用"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
requires-python = ">=3.9,<3.14"
dependencies = [
    "torch>=2.2.0",
    "transformers>=4.40.0",
    "peft>=0.7.1",
    "datasets>=2.14.0",
    "accelerate>=0.26.0",
    "huggingface-hub[cli]>=0.20.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["*.py"]
